examples/test/testpolicy9326.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9326
  namespace: namespace110
spec:
  podSelector:
    matchLabels:
      key9: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value25
          key4: value12
      podSelector:
        matchLabels:
          key15: value19
          key1: value11
